--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Climbing Leaderboard</title>
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #f4f4f9; color: #333; margin: 0; padding: 20px; }
-        .container { max_width: 800px; margin: 0 auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .container { max-width: 800px; margin: 0 auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         h1 { text-align: center; color: #2c3e50; margin-bottom: 5px; }
         .subtitle { text-align: center; color: #666; font-size: 0.9em; margin-bottom: 20px; }
         
-        table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+        table { width: 100%; border-collapse: collapse; margin-top: 20px; table-layout: auto; }
         th, td { padding: 12px; text-align: left; border-bottom: 1px solid #eee; }
         th { background-color: #f8f9fa; font-weight: 600; color: #555; }
         
@@ -37,6 +37,12 @@
         #error-msg { color: red; text-align: center; padding: 20px; display: none; background: #ffeeee; border: 1px solid red; margin-top: 20px;}
 
         @media (max-width: 600px) {
+            body { padding: 8px; }
+            .container { padding: 12px; border-radius: 0; box-shadow: none; }
+            h1 { font-size: 1.4em; margin-bottom: 2px; }
+            .subtitle { font-size: 0.78em; margin-bottom: 12px; }
+            th, td { padding: 8px 6px; font-size: 0.88em; }
+            .rank-col { width: 40px; padding: 8px 4px; }
             .hide-mobile { display: none; }
         }
     </style>
