Update index.html: correct title to 'Dogpatch Boulders Leaderboard' for consistency.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <body>
 
     <div class="container">
-        <h1>Dogpatch Boulder Leaderboard</h1>
+        <h1>Dogpatch Boulders Leaderboard</h1>
         <div class="subtitle">
             Rolling 30-Day Window • Updated: <span id="last-updated">Loading...</span>
         </div>
