Add link to methodology in footer of index.html for score computation clarification

--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
         </table>
 
         <div class="footer">
+            <a href="methodology.html">How is the score computed?</a>
+            <br><br>
             Created by <a href="https://github.com/danicrg" target="_blank">danicrg</a>
         </div>
     </div>
