Add link to methodology in the header of index.html for improved user guidance

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
         <h1>Dogpatch Boulders Leaderboard</h1>
         <div class="subtitle">
             Rolling 30-Day Window • Updated: <span id="last-updated">Loading...</span>
+            • <a href="methodology.html">Methodology</a>
         </div>
 
         <div id="error-msg"></div>
@@ -204,8 +205,6 @@
         </table>
 
         <div class="footer">
-            <a href="methodology.html">How is the score computed?</a>
-            <br><br>
             Created by <a href="https://github.com/danicrg" target="_blank">danicrg</a>
         </div>
     </div>
