--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
         </table>
 
         <div class="footer">
-            Created by <a href="https://github.com/danicrg" target="_blank">danicrg</a>
+            <p>Data sourced from the <a href="https://kaya-app.kayaclimb.com" target="_blank">Kaya app</a>. Log your climbs on Kaya to appear on the leaderboard.</p>
+            <p>Created by <a href="https://github.com/danicrg" target="_blank">danicrg</a></p>
         </div>
     </div>
 
