--- a/index.html
+++ b/index.html
@@ -233,8 +233,14 @@
                     dateSpan.textContent = "Unknown";
                 } else {
                     leaderboardData = jsonResponse.leaderboard;
-                    // Clean up the date string if needed
-                    const d = new Date(jsonResponse.metadata.generated_at);
+                    // #region agent log
+                    fetch('http://127.0.0.1:7841/ingest/5de5ab01-2120-4d42-978e-ebc7375e77c1',{method:'POST',headers:{'Content-Type':'application/json','X-Debug-Session-Id':'12d89b'},body:JSON.stringify({sessionId:'12d89b',hypothesisId:'B',location:'index.html:237',message:'metadata object',data:{metadata:jsonResponse.metadata,generated_at:jsonResponse.metadata?.generated_at,type:typeof jsonResponse.metadata?.generated_at},timestamp:Date.now()})}).catch(()=>{});
+                    // #endregion
+                    const rawDate = jsonResponse.metadata.generated_at;
+                    // #region agent log
+                    fetch('http://127.0.0.1:7841/ingest/5de5ab01-2120-4d42-978e-ebc7375e77c1',{method:'POST',headers:{'Content-Type':'application/json','X-Debug-Session-Id':'12d89b'},body:JSON.stringify({sessionId:'12d89b',hypothesisId:'A',location:'index.html:240',message:'date parsing',data:{rawDate:rawDate,parsedDate:new Date(rawDate).toString(),parsedTime:new Date(rawDate).getTime(),isNaN:isNaN(new Date(rawDate).getTime())},timestamp:Date.now()})}).catch(()=>{});
+                    // #endregion
+                    const d = new Date(rawDate);
                     dateSpan.textContent = d.toLocaleDateString('en-US', { timeZone: 'America/Los_Angeles' });
                 }
 
