--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="container">
         <h1>Dogpatch Boulders Leaderboard</h1>
         <div class="subtitle">
-            Rolling 30-Day Window • Updated: <span id="last-updated">Loading...</span>
+            Last 30 Days • Updated: <span id="last-updated">Loading...</span>
             • <a href="methodology.html">Methodology</a>
         </div>
 
