Update daily.yml, index.html, and README.md to clarify leaderboard update schedule as midnight PST (08:00 UTC) and add refresh note in footer.

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
 
         <div class="footer">
             <p>Data sourced from the <a href="https://kaya-app.kayaclimb.com" target="_blank">Kaya app</a>. Log your climbs on Kaya to appear on the leaderboard.</p>
+            <p>Refreshes daily at midnight PST.</p>
             <p>Created by <a href="https://github.com/danicrg" target="_blank">danicrg</a></p>
         </div>
     </div>
