Refactor CSS in index.html and climbs.html for improved readability and consistency. Adjust styles for various elements, including podium scores and hover effects, while ensuring proper formatting and indentation.

--- a/index.html
+++ b/index.html
@@ -356,9 +356,17 @@
             margin-top: 6px;
         }
 
-        .podium-card.gold .podium-score { color: #b8860b; }
-        .podium-card.silver .podium-score { color: #6b6b78; }
-        .podium-card.bronze .podium-score { color: #8b5e3c; }
+        .podium-card.gold .podium-score {
+            color: #b8860b;
+        }
+
+        .podium-card.silver .podium-score {
+            color: #6b6b78;
+        }
+
+        .podium-card.bronze .podium-score {
+            color: #8b5e3c;
+        }
 
         .podium-grade {
             font-size: 0.78em;
@@ -391,8 +399,13 @@
             margin-bottom: 10px;
         }
 
-        .movers-title.up { color: var(--green); }
-        .movers-title.down { color: var(--red); }
+        .movers-title.up {
+            color: var(--green);
+        }
+
+        .movers-title.down {
+            color: var(--red);
+        }
 
         .mover-row {
             display: flex;
@@ -402,7 +415,7 @@
             font-size: 0.88em;
         }
 
-        .mover-row + .mover-row {
+        .mover-row+.mover-row {
             border-top: 1px solid var(--border);
         }
 
@@ -416,8 +429,13 @@
             font-size: 0.85em;
         }
 
-        .mover-delta.up { color: var(--green); }
-        .mover-delta.down { color: var(--red); }
+        .mover-delta.up {
+            color: var(--green);
+        }
+
+        .mover-delta.down {
+            color: var(--red);
+        }
 
         /* Expandable Rows */
         #leaderboard tbody tr.data-row {
@@ -540,9 +558,17 @@
             transition: all 0.2s;
         }
 
-        .time-btn:first-child { border-radius: 8px 0 0 8px; }
-        .time-btn:last-child { border-radius: 0 8px 8px 0; }
-        .time-btn + .time-btn { border-left: none; }
+        .time-btn:first-child {
+            border-radius: 8px 0 0 8px;
+        }
+
+        .time-btn:last-child {
+            border-radius: 0 8px 8px 0;
+        }
+
+        .time-btn+.time-btn {
+            border-left: none;
+        }
 
         .time-btn.active {
             background: var(--accent);
@@ -709,7 +735,8 @@
         </div>
 
         <div class="footer">
-            <p>Data sourced from the <a href="https://kaya-app.kayaclimb.com" target="_blank">Kaya app</a>. Log your climbs on Kaya to appear on the leaderboard.</p>
+            <p>Data sourced from the <a href="https://kaya-app.kayaclimb.com" target="_blank">Kaya app</a>. Log your
+                climbs on Kaya to appear on the leaderboard.</p>
             <p>Refreshes daily at midnight PST.</p>
             <p>Created by <a href="https://github.com/danicrg" target="_blank">danicrg</a></p>
         </div>
