--- a/climbs.html
+++ b/climbs.html
@@ -72,14 +72,35 @@
             box-shadow: 0 2px 10px var(--shadow);
         }
 
-        .header-wrap {
-            position: relative;
+        .top-bar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 8px;
+        }
+
+        .site-nav {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 4px 14px;
+            font-size: 0.85em;
+        }
+
+        .site-nav a {
+            color: var(--accent);
+            text-decoration: none;
+        }
+
+        .site-nav a:hover {
+            text-decoration: underline;
+        }
+
+        .site-nav a[aria-current="page"] {
+            color: var(--text-muted);
+            pointer-events: none;
         }
 
         .theme-toggle {
-            position: absolute;
-            top: 16px;
-            right: 16px;
             background: none;
             border: 1px solid var(--border);
             border-radius: 8px;
@@ -87,6 +108,8 @@
             font-size: 1.1em;
             cursor: pointer;
             line-height: 1;
+            flex-shrink: 0;
+            transition: border-color 0.2s;
         }
 
         .theme-toggle:hover {
@@ -104,15 +127,6 @@
             color: var(--text-secondary);
             font-size: 0.9em;
             margin-bottom: 20px;
-        }
-
-        .subtitle a {
-            color: var(--accent);
-            text-decoration: none;
-        }
-
-        .subtitle a:hover {
-            text-decoration: underline;
         }
 
         .controls {
@@ -285,6 +299,11 @@
                 font-size: 1.4em;
             }
 
+            .site-nav {
+                gap: 2px 10px;
+                font-size: 0.8em;
+            }
+
             th,
             td {
                 padding: 8px 6px;
@@ -300,15 +319,18 @@
 
 <body>
     <div class="container">
-        <div class="header-wrap">
+        <div class="top-bar">
+            <nav class="site-nav">
+                <a href="index.html">Leaderboard</a>
+                <a href="climbs.html" aria-current="page">Climbs</a>
+                <a href="compare.html">Compare</a>
+                <a href="profile.html">Profile</a>
+                <a href="methodology.html">Methodology</a>
+            </nav>
             <button class="theme-toggle" id="theme-toggle">🌙</button>
-            <h1>Hardest Climbs at Dogpatch</h1>
         </div>
-        <div class="subtitle">
-            Ranked by adjusted difficulty •
-            <a href="index.html">Leaderboard</a> •
-            <a href="methodology.html">Methodology</a>
-        </div>
+        <h1>Hardest Climbs at Dogpatch</h1>
+        <div class="subtitle">Ranked by adjusted difficulty</div>
 
         <div class="controls">
             <input type="text" class="search-box" id="search-input" placeholder="Search by climb name...">
