--- a/compare.html
+++ b/compare.html
@@ -72,12 +72,25 @@
             box-shadow: 0 2px 10px var(--shadow);
         }
 
-        .header-wrap { position: relative; }
+        .top-bar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 8px;
+        }
+
+        .site-nav {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 4px 14px;
+            font-size: 0.85em;
+        }
+
+        .site-nav a { color: var(--accent); text-decoration: none; }
+        .site-nav a:hover { text-decoration: underline; }
+        .site-nav a[aria-current="page"] { color: var(--text-muted); pointer-events: none; }
 
         .theme-toggle {
-            position: absolute;
-            top: 16px;
-            right: 16px;
             background: none;
             border: 1px solid var(--border);
             border-radius: 8px;
@@ -85,6 +98,8 @@
             font-size: 1.1em;
             cursor: pointer;
             line-height: 1;
+            flex-shrink: 0;
+            transition: border-color 0.2s;
         }
 
         .theme-toggle:hover { border-color: var(--accent); }
@@ -97,9 +112,6 @@
             font-size: 0.9em;
             margin-bottom: 24px;
         }
-
-        .subtitle a { color: var(--accent); text-decoration: none; }
-        .subtitle a:hover { text-decoration: underline; }
 
         .picker-row {
             display: flex;
@@ -272,6 +284,7 @@
         @media (max-width: 600px) {
             body { padding: 8px; }
             .container { padding: 16px; border-radius: 0; box-shadow: none; }
+            .site-nav { gap: 2px 10px; font-size: 0.8em; }
             .compare-grid { grid-template-columns: 1fr; }
         }
     </style>
@@ -279,14 +292,18 @@
 
 <body>
     <div class="container">
-        <div class="header-wrap">
+        <div class="top-bar">
+            <nav class="site-nav">
+                <a href="index.html">Leaderboard</a>
+                <a href="climbs.html">Climbs</a>
+                <a href="compare.html" aria-current="page">Compare</a>
+                <a href="profile.html">Profile</a>
+                <a href="methodology.html">Methodology</a>
+            </nav>
             <button class="theme-toggle" id="theme-toggle">🌙</button>
-            <h1>Head-to-Head</h1>
         </div>
-        <div class="subtitle">
-            Compare two climbers side by side •
-            <a href="index.html">Leaderboard</a>
-        </div>
+        <h1>Head-to-Head</h1>
+        <div class="subtitle">Compare two climbers side by side</div>
 
         <div class="picker-row">
             <div class="picker a">
