--- a/index.html
+++ b/index.html
@@ -180,11 +180,36 @@
             font-weight: bold;
         }
 
-        /* Theme Toggle */
+        /* Top Bar & Navigation */
+        .top-bar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 8px;
+        }
+
+        .site-nav {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 4px 14px;
+            font-size: 0.85em;
+        }
+
+        .site-nav a {
+            color: var(--accent);
+            text-decoration: none;
+        }
+
+        .site-nav a:hover {
+            text-decoration: underline;
+        }
+
+        .site-nav a[aria-current="page"] {
+            color: var(--text-muted);
+            pointer-events: none;
+        }
+
         .theme-toggle {
-            position: absolute;
-            top: 16px;
-            right: 16px;
             background: none;
             border: 1px solid var(--border);
             border-radius: 8px;
@@ -192,15 +217,12 @@
             font-size: 1.1em;
             cursor: pointer;
             line-height: 1;
+            flex-shrink: 0;
             transition: border-color 0.2s;
         }
 
         .theme-toggle:hover {
             border-color: var(--accent);
-        }
-
-        .header-wrap {
-            position: relative;
         }
 
         #error-msg {
@@ -653,6 +675,11 @@
                 margin-bottom: 12px;
             }
 
+            .site-nav {
+                gap: 2px 10px;
+                font-size: 0.8em;
+            }
+
             th,
             td {
                 padding: 8px 6px;
@@ -674,16 +701,19 @@
 <body>
 
     <div class="container">
-        <div class="header-wrap">
+        <div class="top-bar">
+            <nav class="site-nav">
+                <a href="index.html" aria-current="page">Leaderboard</a>
+                <a href="climbs.html">Climbs</a>
+                <a href="compare.html">Compare</a>
+                <a href="profile.html">Profile</a>
+                <a href="methodology.html">Methodology</a>
+            </nav>
             <button class="theme-toggle" id="theme-toggle" title="Toggle dark mode">🌙</button>
-            <h1>Dogpatch Boulders Leaderboard</h1>
         </div>
+        <h1>Dogpatch Boulders Leaderboard</h1>
         <div class="subtitle">
             Last 30 Days • Updated: <span id="last-updated">Loading...</span>
-            • <a href="climbs.html">Hardest Climbs</a>
-            • <a href="compare.html">Compare</a>
-            • <a href="profile.html">Profile</a>
-            • <a href="methodology.html">Methodology</a>
         </div>
 
         <div id="error-msg"></div>
