--- a/methodology.html
+++ b/methodology.html
@@ -119,14 +119,38 @@
             border-radius: 12px;
             box-shadow: 0 2px 16px var(--shadow);
             transition: background 0.3s;
-            position: relative;
         }
 
-        /* Theme Toggle */
+        /* Top Bar & Navigation */
+        .top-bar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 24px;
+        }
+
+        .site-nav {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 4px 14px;
+            font-size: 0.85em;
+        }
+
+        .site-nav a {
+            color: var(--accent);
+            text-decoration: none;
+        }
+
+        .site-nav a:hover {
+            text-decoration: underline;
+        }
+
+        .site-nav a[aria-current="page"] {
+            color: var(--text-muted);
+            pointer-events: none;
+        }
+
         .theme-toggle {
-            position: absolute;
-            top: 16px;
-            right: 16px;
             background: none;
             border: 1px solid var(--border);
             border-radius: 8px;
@@ -134,32 +158,12 @@
             font-size: 1.1em;
             cursor: pointer;
             line-height: 1;
+            flex-shrink: 0;
             transition: border-color 0.2s;
-            z-index: 2;
         }
 
         .theme-toggle:hover {
             border-color: var(--accent);
-        }
-
-        /* Navigation */
-        .back-link {
-            display: inline-flex;
-            align-items: center;
-            gap: 6px;
-            font-size: 0.85em;
-            color: var(--accent);
-            text-decoration: none;
-            margin-bottom: 32px;
-        }
-
-        .back-link:hover {
-            color: var(--accent-hover);
-        }
-
-        .back-link svg {
-            width: 14px;
-            height: 14px;
         }
 
         /* Typography */
@@ -629,6 +633,11 @@
                 font-size: 1.4em;
             }
 
+            .site-nav {
+                gap: 2px 10px;
+                font-size: 0.8em;
+            }
+
             .versus {
                 grid-template-columns: 1fr;
             }
@@ -669,21 +678,16 @@
 
 <body>
     <div class="container">
-        <button class="theme-toggle" id="theme-toggle">🌙</button>
-
-        <a href="index.html" class="back-link">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor">
-                <path fill-rule="evenodd"
-                    d="M9.78 4.22a.75.75 0 0 1 0 1.06L7.06 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L5.47 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0Z" />
-            </svg>
-            Leaderboard
-        </a>
-        <span style="color:var(--text-muted); font-size:0.85em; margin: 0 4px 32px;">•</span>
-        <a href="climbs.html" class="back-link">Hardest Climbs</a>
-        <span style="color:var(--text-muted); font-size:0.85em; margin: 0 4px 32px;">•</span>
-        <a href="compare.html" class="back-link">Compare</a>
-        <span style="color:var(--text-muted); font-size:0.85em; margin: 0 4px 32px;">•</span>
-        <a href="profile.html" class="back-link">Profile</a>
+        <div class="top-bar">
+            <nav class="site-nav">
+                <a href="index.html">Leaderboard</a>
+                <a href="climbs.html">Climbs</a>
+                <a href="compare.html">Compare</a>
+                <a href="profile.html">Profile</a>
+                <a href="methodology.html" aria-current="page">Methodology</a>
+            </nav>
+            <button class="theme-toggle" id="theme-toggle">🌙</button>
+        </div>
 
         <h1>How Scoring Works</h1>
         <p class="page-subtitle">
