--- a/profile.html
+++ b/profile.html
@@ -60,12 +60,25 @@
             box-shadow: 0 2px 10px var(--shadow);
         }
 
-        .header-wrap { position: relative; }
+        .top-bar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 8px;
+        }
+
+        .site-nav {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 4px 14px;
+            font-size: 0.85em;
+        }
+
+        .site-nav a { color: var(--accent); text-decoration: none; }
+        .site-nav a:hover { text-decoration: underline; }
+        .site-nav a[aria-current="page"] { color: var(--text-muted); pointer-events: none; }
 
         .theme-toggle {
-            position: absolute;
-            top: 16px;
-            right: 16px;
             background: none;
             border: 1px solid var(--border);
             border-radius: 8px;
@@ -73,21 +86,13 @@
             font-size: 1.1em;
             cursor: pointer;
             line-height: 1;
+            flex-shrink: 0;
+            transition: border-color 0.2s;
         }
 
         .theme-toggle:hover { border-color: var(--accent); }
 
         h1 { text-align: center; color: var(--text-heading); margin-bottom: 5px; font-size: 1.5em; }
-
-        .subtitle {
-            text-align: center;
-            color: var(--text-secondary);
-            font-size: 0.9em;
-            margin-bottom: 20px;
-        }
-
-        .subtitle a { color: var(--accent); text-decoration: none; }
-        .subtitle a:hover { text-decoration: underline; }
 
         .search-wrap {
             margin-bottom: 24px;
@@ -336,6 +341,7 @@
         @media (max-width: 600px) {
             body { padding: 8px; }
             .container { padding: 16px; border-radius: 0; box-shadow: none; }
+            .site-nav { gap: 2px 10px; font-size: 0.8em; }
             .card-name { font-size: 1.2em; }
             .card-rank { font-size: 1.8em; }
             .card-stat-value { font-size: 1.3em; }
@@ -345,14 +351,17 @@
 
 <body>
     <div class="container">
-        <div class="header-wrap">
+        <div class="top-bar">
+            <nav class="site-nav">
+                <a href="index.html">Leaderboard</a>
+                <a href="climbs.html">Climbs</a>
+                <a href="compare.html">Compare</a>
+                <a href="profile.html" aria-current="page">Profile</a>
+                <a href="methodology.html">Methodology</a>
+            </nav>
             <button class="theme-toggle" id="theme-toggle">🌙</button>
-            <h1>Climber Profile</h1>
         </div>
-        <div class="subtitle">
-            <a href="index.html">Leaderboard</a> •
-            <a href="compare.html">Compare</a>
-        </div>
+        <h1>Climber Profile</h1>
 
         <div class="search-wrap">
             <input type="text" id="search-input" placeholder="Search for a climber...">
