Refactor CSS styles across multiple HTML files to improve layout consistency and responsiveness. Adjust padding and margin values for better visual alignment on various screen sizes.

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
         </div>
         <h1>Dogpatch Boulders Leaderboard</h1>
         <div class="subtitle">
-            Last 30 Days • Updated: <span id="last-updated">Loading...</span>
+            Updated: <span id="last-updated">Loading...</span>
         </div>
 
         <div id="error-msg"></div>
