--- a/methodology.html
+++ b/methodology.html
@@ -115,7 +115,7 @@
             max-width: 760px;
             margin: 0 auto;
             background: var(--surface);
-            padding: 48px 40px;
+            padding: 20px 40px;
             border-radius: 12px;
             box-shadow: 0 2px 16px var(--shadow);
             transition: background 0.3s;
@@ -126,7 +126,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 24px;
+            margin-bottom: 8px;
         }
 
         .site-nav {
@@ -624,7 +624,7 @@
             }
 
             .container {
-                padding: 24px 18px;
+                padding: 12px;
                 border-radius: 0;
                 box-shadow: none;
             }
