Add podium styling to index.html for enhanced leaderboard presentation

--- a/index.html
+++ b/index.html
@@ -694,6 +694,47 @@
             .hide-mobile {
                 display: none;
             }
+
+            .podium {
+                gap: 6px;
+                margin: 12px 0 20px;
+            }
+
+            .podium-card {
+                padding: 12px 6px 10px;
+                border-radius: 10px;
+                min-width: 0;
+            }
+
+            .podium-card.gold {
+                padding-top: 14px;
+                min-height: 110px;
+            }
+
+            .podium-card.silver,
+            .podium-card.bronze {
+                min-height: 95px;
+            }
+
+            .podium-medal {
+                font-size: 1.2em;
+            }
+
+            .podium-name {
+                font-size: 0.8em;
+            }
+
+            .podium-username {
+                font-size: 0.65em;
+            }
+
+            .podium-score {
+                font-size: 1em;
+            }
+
+            .podium-grade {
+                font-size: 0.68em;
+            }
         }
     </style>
 </head>
